# shards-fetcher

./: README.md  pyproject.toml
docs/: Specification.md
src/shards/fetcher/: core.py  decompress.py  exceptions.py  resource.py
tests/: fakers.py  test_decompress.py  test_exceptions.py  test_fetcher_core.py  test_resource.py
