[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shards-fetcher"
dynamic = ["version"]
description = 'The library for fetching web content'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "cli",
  "command line",
]
authors = [ { name = "dev", email = "dev4dojo@outlook.com" },]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp==3.12.15",
]


[tool.hatch.build.targets.wheel]
packages = ["src/shards"]

[tool.hatch.version]
path = "src/shards/fetcher/__about__.py"

[tool.hatch.envs.test.scripts]
all = "pytest"
cov = "coverage run -m pytest && coverage report --show-missing"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-coverage",
  "ruff",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/shards"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
omit = [
    "*/tests/*",
    "*/__about__.py",
]
